# DBMS---simulator

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  experimentCFD.cpp  experimentFALSMPhd.cpp  experimentFAPhd.cpp  experimentLAMPhd.cpp  experimentLsmPaper.cpp  experimentPAMPhd.cpp  main.cpp
cmake/: FindGMock.cmake
experimentResults/lsmPaper/paper/: ex0_100rsearches.txt  ex0_20rsearches.txt  ex0_250rsearches.txt  ex0_40rsearches.txt  ex1_0rsearches.txt  (+5 more)
include/: bar.hpp
include/adaptiveMerging/: adaptiveMerging.hpp  adaptiveMergingFramework.hpp  eAdaptiveMerging.hpp  fAdaptiveMerging.hpp  lazyAdaptiveMerging.hpp  pcmAdaptiveMerging.hpp
include/disk/: disk.hpp  diskColumnOverlay.hpp  diskFlashNandFTL.hpp  diskFlashNandRaw.hpp  diskPCM.hpp  diskSSD.hpp
include/index/: bbptree.hpp  bptree.hpp  cbptree.hpp  cfdtree.hpp  dbIndex.hpp  dbIndexColumn.hpp  dbIndexRawToColumnWrapper.hpp  dsm.hpp  falsmtree.hpp  fatree.hpp  fbdsm.hpp  fdtree.hpp  lsmtree.hpp  phantomIndex.hpp  sbptree.hpp  ubptree.hpp
include/logger/: logger.hpp
include/observability/: adaptiveMergingCounters.hpp  counterManager.hpp  indexCounters.hpp  memoryCounters.hpp  workloadCounters.hpp
include/storage/: memoryController.hpp  memoryControllerColumnOverlay.hpp  memoryControllerFlashNandFTL.hpp  memoryControllerFlashNandRaw.hpp  memoryControllerPCM.hpp  memoryControllerSSD.hpp  memoryModel.hpp  memoryModelColumnOverlay.hpp  memoryModelFlashNandFTL.hpp  memoryModelFlashNandRaw.hpp  memoryModelPCM.hpp  memoryModelSSD.hpp
include/table/: dbTable.hpp  dbTableTPCC.hpp
include/threadPool/: dbThreadPool.hpp  threadPool.hpp
include/workload/: workload.hpp  workloadAdaptiveMerging.hpp  workloadLib.hpp  workloadStep.hpp  workloadStepBulkload.hpp  workloadStepDelete.hpp  workloadStepInsert.hpp  workloadStepPSearch.hpp  workloadStepRSearch.hpp
scripts/gnuplot/: cfdPhd.gp  faPhd.gp  falsmPhd.gp  lamPhd.gp  lsmPaper.gp  pamPhd.gp
src/: CMakeLists.txt  adaptiveMerging.cpp  adaptiveMergingCounters.cpp  adaptiveMergingFramework.cpp  analyzer.cpp  analyzerConsole.cpp  analyzerFile.cpp  analyzerStepQueryTime.cpp  analyzerStepQueryTimeNormalized.cpp  analyzerStepQueryWearout.cpp  analyzerStepQueryWearoutNormalized.cpp  analyzerStepTotalTime.cpp  analyzerStepTotalTimeNormalized.cpp  analyzerStepTotalWearout.cpp  analyzerStepTotalWearoutNormalized.cpp  bar.cpp  bbptree.cpp  bptree.cpp  cbptree.cpp  cfdtree.cpp  dbIndex.cpp  dbIndexColumn.cpp  dbIndexRawToColumnWrapper.cpp  dbTable.cpp  dbThreadPool.cpp  disk.cpp  diskColumnOverlay.cpp  diskFlashNandFTL.cpp  diskFlashNandRaw.cpp  diskPCM.cpp  diskSSD.cpp  dsm.cpp  eAdaptiveMerging.cpp  fAdaptiveMerging.cpp  falsmtree.cpp  fatree.cpp  fbdsm.cpp  fdtree.cpp  indexCounters.cpp  lazyAdaptiveMerging.cpp  (+23 more)
tests/: CMakeLists.txt  adaptiveMergingCounters_test.cpp  adaptiveMergingFramework_test.cpp  adaptiveMerging_test.cpp  analyzerConsole_test.cpp  analyzerFile_test.cpp  analyzerStepQueryTimeNormalized_test.cpp  analyzerStepQueryTime_test.cpp  analyzerStepQueryWearoutNormalized_test.cpp  analyzerStepQueryWearout_test.cpp  analyzerStepTotalTimeNormalized_test.cpp  analyzerStepTotalTime_test.cpp  analyzerStepTotalWearoutNormalized_test.cpp  analyzerStepTotalWearout_test.cpp  bar_test.cpp  bbptree_test.cpp  bptree_test.cpp  cbptree_test.cpp  cfdtree_test.cpp  counterManager_test.cpp  dbIndexColumn_test.cpp  dbIndexRawToColumnWrapper_test.cpp  dbIndex_test.cpp  dbTable_test.cpp  diskColumnOverlay_test.cpp  diskFlashNandFTL_test.cpp  diskFlashNandRaw_test.cpp  diskPCM_test.cpp  diskSSD_test.cpp  disk_test.cpp  dsm_test.cpp  eAdaptiveMerging_test.cpp  fAdaptiveMerging_test.cpp  falsmtree_test.cpp  fatree_test.cpp  fbdsm_test.cpp  fdtree_test.cpp  indexCounters_test.cpp  lazyAdaptiveMerging_test.cpp  lsmtree_test.cpp  (+26 more)
(+348 files in other folders)
